--- a/pom.xml
+++ b/pom.xml
@@ -43,12 +43,12 @@
         <version>1.5.0</version>
         <executions>
           <execution>
-            <phase>install</phase>
+            <phase>compile</phase>
             <goals>
               <goal>java</goal>
             </goals>
             <configuration>
-              <mainClass>net.placemarkt.PrepareTemplates</mainClass>
+              <mainClass>net.placemarkt.TemplateProcessor</mainClass>
             </configuration>
           </execution>
         </executions>
