--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>net.placemarkt</groupId>
   <artifactId>address-formatter-java</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.0.1</version>
   <name>address-formatter-java</name>
   <description>A simple address-formatter-java.</description>
   <url>http://placemarkt.net</url>
@@ -71,8 +71,8 @@
   <distributionManagement>
     <repository>
       <id>github</id>
-      <name>GitHub rkoeze Apache Maven Packages</name>
-      <url>https://maven.pkg.github.com/rkoeze/address-formatter-java</url>
+      <name>GitHub placemarkt Apache Maven Packages</name>
+      <url>https://maven.pkg.github.com/placemarkt/address-formatter-java</url>
     </repository>
   </distributionManagement>
 </project>
