--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
       - name: Publish to the Maven Central Repository
-        run: mkdir src/main/resources && mvn compile && mvn --batch-mode deploy
+        run: git submodule update --init && mkdir src/main/resources && mvn compile && mvn --batch-mode deploy
         env:
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
@@ -29,6 +29,6 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
       - name: Publish to GitHub Packages
-        run: mkdir src/main/resources && mvn compile && mvn --batch-mode deploy
+        run: git submodule update --init && mkdir src/main/resources && mvn compile && mvn --batch-mode deploy
         env:
           GITHUB_TOKEN: ${{ secrets.ADDRESS_FORMATTER_GITHUB_TOKEN }}
