--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,27 +9,23 @@ jobs:
       contents: read
       packages: write
     steps:
-      - name: Import GPG key
-        run: |
-            echo "$MAVEN_GPG_KEY" | base64 --decode | gpg --batch --import
-            echo "$MAVEN_GPG_PASSPHRASE" | gpg --batch --yes --pinentry-mode loopback --passphrase-fd 0 --import-ownertrust
-        env:
-            MAVEN_GPG_KEY: ${{ secrets.MAVEN_GPG_KEY }}
-            MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
       - uses: actions/checkout@v4
-      - name: Set up Java for publishing to Maven Central Repository
-        uses: actions/setup-java@v4
-        with:
-          java-version: '11'
-          distribution: 'temurin'
-          server-id: ossrh
-          server-username: MAVEN_USERNAME
-          server-password: MAVEN_PASSWORD
-      - name: Publish to the Maven Central Repository
-        run: git submodule update --init && mkdir src/main/resources && mvn compile && mvn --batch-mode deploy
-        env:
-          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-          MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
+      # - name: Set up Java for publishing to Maven Central Repository
+      #   uses: actions/setup-java@v4
+      #   with:
+      #     java-version: '11'
+      #     distribution: 'temurin'
+      #     server-id: ossrh
+      #     server-username: MAVEN_USERNAME
+      #     server-password: MAVEN_PASSWORD
+      #     gpg-private-key: ${{ secrets.MAVEN_GPG_KEY }} 
+      #     gpg-passphrase: MAVEN_GPG_PASSPHRASE
+      # - name: Publish to the Maven Central Repository
+      #   run: git submodule update --init && mkdir src/main/resources && mvn compile && mvn --batch-mode deploy
+      #   env:
+      #     MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+      #     MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
+      #     MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
       - name: Set up Java for publishing to GitHub Packages
         uses: actions/setup-java@v4
         with:
