--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,29 +10,31 @@ jobs:
       packages: write
     steps:
       - uses: actions/checkout@v4
-      # - name: Set up Java for publishing to Maven Central Repository
-      #   uses: actions/setup-java@v4
-      #   with:
-      #     java-version: '11'
-      #     distribution: 'temurin'
-      #     server-id: ossrh
-      #     server-username: MAVEN_USERNAME
-      #     server-password: MAVEN_PASSWORD
-      #     gpg-private-key: ${{ secrets.MAVEN_GPG_KEY }} 
-      #     gpg-passphrase: MAVEN_GPG_PASSPHRASE
-      # - name: Publish to the Maven Central Repository
-      #   run: git submodule update --init && mkdir src/main/resources && mvn compile && mvn --batch-mode deploy
-      #   env:
-      #     MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-      #     MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
-      #     MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
+      - name: Compile package
+        run: git submodule update --init && mkdir src/main/resources && mvn compile
+      - name: Set up Java for publishing to Maven Central Repository
+        uses: actions/setup-java@v4
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          server-id: ossrh
+          server-username: MAVEN_USERNAME
+          server-password: MAVEN_PASSWORD
+          gpg-private-key: ${{ secrets.MAVEN_GPG_KEY }} 
+          gpg-passphrase: MAVEN_GPG_PASSPHRASE
+      - name: Publish to the Maven Central Repository
+        run:  mvn --batch-mode deploy -P ossrh
+        env:
+          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
+          MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
       - name: Set up Java for publishing to GitHub Packages
         uses: actions/setup-java@v4
         with:
           java-version: '11'
           distribution: 'temurin'
           server-id: github
-      - name: Publish to GitHub Packages
-        run: git submodule update --init && mkdir src/main/resources && mvn compile && mvn --batch-mode deploy -P github
+      - name: Publish to GitHub Packagesg
+        run: mvn --batch-mode deploy -P github
         env:
           GITHUB_TOKEN: ${{ secrets.ADDRESS_FORMATTER_GITHUB_TOKEN }}
